# Robotics-Research-Assignments

./: .gitignore  README.md  packages.rosinstall
Auxiliary/turtlebot3_sim_update-master/: README.md
Auxiliary/turtlebot3_sim_update-master/gazeboModel/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
Lab1/: README.md  config.ini  diamond_finder.py  diamond_finder_autograder.py  lab1_gt.txt  requirements.txt
Lab2/team_x_object_follower/: CMakeLists.txt  REDME.md  mainpage.dox  manifest.xml
Lab2/team_x_object_follower/launch/: object_follow.launch
Lab2/team_x_object_follower/scripts/: detectObject.py  find_object.py  rotate_robot.py
Lab3/: README.md
Lab3/team_x_chase_object/: CMakeLists.txt  package.xml
Lab3/team_x_chase_object/launch/: bare_bones_chase_object.launch  chase_object.launch
Lab3/team_x_chase_object/scripts/: chase_object.py  detect_object.py  get_object.py
Lab4/: README.md
Lab4/team_x_navigate_to_goal/: CMakeLists.txt  package.xml  wayPoints.txt
Lab4/team_x_navigate_to_goal/launch/: turtlebot.launch
Lab4/team_x_navigate_to_goal/scripts/: Rotation_Script.py  get_object_range.py  go_to_goal.py
Lab5/: README.md
Lab5/team_x_mapping/: global-wp-2.txt  package.xml
Lab5/team_x_mapping/launch/: goal.launch  mapping.launch
Lab5/team_x_mapping/scripts/: go_to_goal.py
Lab6/: README.md
Lab6/lab6pt1/: README.md  knn.py
Lab6/team_x_maze/: README.md  package.xml
Lab6/team_x_maze/launch/: maze.launch  navigation.launch
Lab6/team_x_maze/map/: maze.pgm  real_maze.yaml  sim_maze.pgm  sim_maze.yaml
Lab6/team_x_maze/msg/: Wall.msg
Lab6/team_x_maze/param/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml
lab6pt1/: README  README.md  knn.py  knnModel
media/: ezgif.com-gif-maker.gif:Zone.Identifier  gazebo-sim.mp4:Zone.Identifier  lab4_gazebo.gif:Zone.Identifier  rave.gif:Zone.Identifier
team_x_chase_object/: Lab 3 report.docx  REDME.md  chase_object.rosinstall  manifest.xml
team_x_chase_object/launch/: chase_object.launch
team_x_chase_object/scripts/: chase_object.py  detect_object.py
team_x_mapping/: CMakeLists.txt  REDME.md  global-wp-2.txt  global-wp-sim.txt
team_x_mapping/launch/: mapping.launch  navigation.launch
team_x_mapping/map/: map.yaml
team_x_mapping/scripts/: go_to_goal.py
team_x_maze/: CMakeLists.txt  README.md  package.xml
team_x_maze/launch/: maze.launch  navigation.launch
team_x_maze/map/: real_maze.pgm  real_maze.yaml
team_x_maze/scripts/: detect_walls.py  knn.py  maze.py
team_x_maze/urdf/: turtlebot3_burger.urdf.xacro
team_x_navigate_to_goal/: CMakeLists.txt  REDME.md  wayPoints.txt
team_x_navigate_to_goal/launch/: go_to_goal.launch  navigate.launch
team_x_navigate_to_goal/scripts/: get_object_range.py  go_to_goal.py  test-2.py  test.py
team_x_navigate_to_goal/team_x_navigate_to_goal/: CMakeLists.txt
team_x_object_follower/: REDME.md
team_x_object_follower/scripts/: rotate_robot.py
(+24 files in other folders)
